# aoc2022

./: README.md  pyproject.toml  pyrightconfig.json  runner.py  runpy.sh
.github/workflows/: aoc.yml  day_10.yml  day_11.yml
day01/: day01.py
day02/: day02.py
day03/: day03.py
day04/: day04.py
day05/: day05.py
day06/: day06.py
day07/: day07.py
day08/: day08.py
day09/: day09.py
day10/: day10.py
day11/: day11.py
day12/: day12.py
day13/: day13.py
