[tool.poetry]
name = "aoc2022"
version = "0.1.0"
description = ""
authors = ["Arnav Jindal <arnav.jindal7@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
toml = "^0.10.2"
yapf = "^0.32.0"
isort = "^5.10.1"
poethepoet = "^0.16.5"

[tool.poe.tasks]
format="poetry run yapf --recursive --in-place --verbose  ."
imports="poetry run isort ."
pre=["imports","format"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
